--- a/index.html
+++ b/index.html
@@ -313,7 +313,14 @@
                 <div class="grid md:grid-cols-3 gap-6 mb-12">
                     <div class="bg-gradient-to-br from-blue-600 to-blue-700 text-white p-8 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
                         <div class="text-center">
-                            <div class="text-5xl mb-4">🏗️</div>
+                            <div class="mb-4 flex justify-center">
+                                <svg class="w-16 h-16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <rect x="2" y="2" width="9" height="9" rx="1"/>
+                                    <rect x="13" y="2" width="9" height="9" rx="1"/>
+                                    <rect x="2" y="13" width="9" height="9" rx="1"/>
+                                    <rect x="13" y="13" width="9" height="9" rx="1"/>
+                                </svg>
+                            </div>
                             <h3 class="text-2xl font-bold mb-4">Parede Pronta</h3>
                             <p class="text-blue-100 leading-relaxed">
                                 Blocos de <strong>50cm × 1m</strong> que dispensam chapisco e oferecem acabamento liso e uniforme direto da instalação.
@@ -323,7 +330,12 @@
 
                     <div class="bg-gradient-to-br from-yellow-500 to-yellow-600 text-white p-8 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
                         <div class="text-center">
-                            <div class="text-5xl mb-4">⚡</div>
+                            <div class="mb-4 flex justify-center">
+                                <svg class="w-16 h-16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <polyline points="12 6 12 12 16 14"/>
+                                </svg>
+                            </div>
                             <h3 class="text-2xl font-bold mb-4">Instalação Rápida</h3>
                             <p class="text-yellow-50 leading-relaxed">
                                 Substitui completamente o tijolo convencional com <strong>facilidade única</strong> e instalação <strong>5x mais rápida</strong>.
@@ -333,7 +345,11 @@
 
                     <div class="bg-gradient-to-br from-green-600 to-green-700 text-white p-8 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
                         <div class="text-center">
-                            <div class="text-5xl mb-4">💪</div>
+                            <div class="mb-4 flex justify-center">
+                                <svg class="w-16 h-16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+                                </svg>
+                            </div>
                             <h3 class="text-2xl font-bold mb-4">Máxima Durabilidade</h3>
                             <p class="text-green-100 leading-relaxed">
                                 EPS revestido em concreto oferece <strong>resistência superior</strong> à umidade, pragas e longevidade incomparável.
@@ -427,18 +443,20 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-blue-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-blue-700 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M14 14.76V3.5a2.5 2.5 0 0 0-5 0v11.26a4.5 4.5 0 1 0 5 0z"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Isolamento Térmico Superior</h3>
-                    <p class="text-gray-600">Mantém a temperatura ideal do ambiente, reduzindo custos com climatização em até 40%.</p>
+                    <p class="text-gray-600">Mantém a temperatura ideal do ambiente, reduzindo custos com climatização.</p>
                 </div>
 
                 <div class="bg-green-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-green-600 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M12 1L3 5v6c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V5l-9-4zM10 17l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"/>
+                            <path d="M15.54 8.46a5 5 0 0 1 0 7.07"/>
+                            <path d="M19.07 4.93a10 10 0 0 1 0 14.14"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Isolamento Acústico</h3>
@@ -447,8 +465,9 @@
 
                 <div class="bg-yellow-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-yellow-600 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10"/>
+                            <polyline points="12 6 12 12 16 14"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Instalação 5x Mais Rápida</h3>
@@ -457,8 +476,8 @@
 
                 <div class="bg-purple-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-purple-600 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M9 11H7v6h2v-6zm4 0h-2v6h2v-6zm4 0h-2v6h2v-6zm2.5-9H19v2h-1.5v16.5c0 1.1-.9 2-2 2h-11c-1.1 0-2-.9-2-2V4H1V2h3.5c1.1 0 2 .9 2 2v1h7V4c0-1.1.9-2 2-2z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Maior Durabilidade</h3>
@@ -467,8 +486,11 @@
 
                 <div class="bg-red-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="3" y="3" width="7" height="7"/>
+                            <rect x="14" y="3" width="7" height="7"/>
+                            <rect x="14" y="14" width="7" height="7"/>
+                            <rect x="3" y="14" width="7" height="7"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Parede Pronta</h3>
@@ -477,8 +499,9 @@
 
                 <div class="bg-indigo-50 p-8 rounded-xl hover:shadow-lg transition-all duration-300">
                     <div class="w-16 h-16 bg-indigo-600 rounded-full flex items-center justify-center mb-6">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
-                            <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="12" y1="1" x2="12" y2="23"/>
+                            <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
                         </svg>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Economia Total</h3>
